2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/binarystring.hxx,
 include/pqxx/compiler-public.hxx, include/pqxx/config.h.in,
 include/pqxx/cursor.hxx, include/pqxx/except.hxx,
 include/pqxx/largeobject.hxx, include/pqxx/pipeline.hxx,
 include/pqxx/result.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/row.hxx, include/pqxx/strconv.hxx, include/pqxx/tablereader.hxx,
 include/pqxx/tablewriter.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/except.cxx,
 test/test_main.hxx:
 - Support C++11 [[noreturn]] attribute.
 - Support C++14 [[deprecated]] attribute.
 - Move function attributes to front of declaration.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx:
 - Remove half-baked optimization when converting non-number floats to strings.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint:
 - Find all headers, including in subdirectories, but skip directories.
 - Make script fail on error.
 - Use $() instead of ``.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 src/connection_base.cxx, test/unit/test_escape.cxx:
 - New unesc_raw() function: un-escapes binary data.
 - Fixes #277.  Thanks Markus Parker.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_subtransaction.cxx:
 - Reproduce #271: subtransaction does not roll back implicitly.
 - Test subtransaction's commit behaviour more systematically.
 src/subtransaction.cxx:
 - Call End() from destructor.  Fixes #271.  Thanks harmic.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test069.cxx:
 - Fix spurious failure; sometimes the number of tables seems to change.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint, tools/splitconfig, tools/template2mak.py:
 - Check for, and fix, Python lint.
2015-01-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/notify-listen,