@@ -1,3 +1,8 @@
+2015-01-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in:
+ - Add --with-postgres-include and --with-postgres-lib options.
+ - Start using AS_IF() instead of plain shell "if".
+ - Start using $() instead of ``.
 2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configitems, configure.ac.in, include/pqxx/binarystring.hxx,
  include/pqxx/compiler-public.hxx, include/pqxx/config.h.in,
